# RAG_AGENT

./: .env.example  .gitignore  README.md  REMADER.md  main.py  pyproject.toml  teaching.md
api/: chat.py  documents.py
chat/: long_term_memory.py  mongo_logger.py  rag_chain.py  session_store.py
core/: config.py  dependencies.py
docs/superpowers/plans/: 2026-05-15-rag-knowledge-base.md
docs/superpowers/specs/: 2026-05-15-rag-knowledge-base-design.md
document_processing/: pipeline.py
document_processing/chunkers/: smart_chunker.py
document_processing/cleaners/: text_cleaner.py
document_processing/loaders/: base.py  csv_loader.py  markdown_loader.py  pdf_loader.py  text_loader.py  word_loader.py
embeddings/: tongyi_embedder.py
retrieval/: retriever.py
tests/: test_documents_api.py  test_loaders.py  test_pipeline.py  test_qdrant_store.py  test_retriever.py  test_smart_chunker.py  test_text_cleaner.py  test_tongyi_embedder.py
vectorstore/: qdrant_store.py
