[project]
name = "ragagent"
version = "0.1.0"
description = "RAG knowledge base with LangChain + Qdrant + Tongyi"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic-settings>=2.3.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "qdrant-client>=1.9.0",
    "pypdf>=4.3.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "docx2txt>=0.8",
    "chardet>=5.2.0",
    "dashscope>=1.20.0",
    "python-multipart>=0.0.9",
    "unstructured>=0.14.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "api", "document_processing", "embeddings", "vectorstore", "retrieval"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
